--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "dotenv": "^17.2.4",
+    "ejs": "^4.0.1",
     "express": "^5.2.1",
     "mongoose": "^9.2.0"
   }
