--- a/package.json
+++ b/package.json
@@ -10,9 +10,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^3.0.3",
+    "connect-mongo": "^6.0.0",
     "dotenv": "^17.2.4",
     "ejs": "^4.0.1",
     "express": "^5.2.1",
-    "mongoose": "^9.2.0"
+    "express-session": "^1.19.0",
+    "mongoose": "^9.2.0",
+    "passport": "^0.7.0",
+    "passport-local": "^1.0.0"
   }
 }
